Logs atualizados, sendo divido por tamanho de arquivo, depois de 4KB ele gera um novo